# DS-GA-3001-Final-Project

./: README.md  pyproject.toml
Project Proposal/: DS-GA 3001 Project Proposal.docx
code/.ipynb_checkpoints/: Harness-checkpoint.ipynb
data/: FLPSX_final.csv  italy-inflation-interpolated.csv
model/: catboost
